--- a/app/src/main/res/layout/fragment_student_login_page.xml
+++ b/app/src/main/res/layout/fragment_student_login_page.xml
@@ -15,7 +15,7 @@ tools:context=".StudentFrontPage">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:text="@string/front_page_title"
+        android:text="@string/student_login_text"
         android:textColor="@color/white"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +50,7 @@ tools:context=".StudentFrontPage">
         android:layout_height="wrap_content"
         android:layout_marginBottom="10sp"
         android:background="@color/button_tint"
+        android:hint="@string/enter_email_text"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:textSize="34sp" />
@@ -68,6 +69,7 @@ tools:context=".StudentFrontPage">
         android:layout_height="wrap_content"
         android:layout_marginBottom="10sp"
         android:background="@color/button_tint"
+        android:hint="@string/enter_password_text"
         android:ems="10"
         android:inputType="textPassword"
         android:textSize="34sp"
@@ -77,7 +79,7 @@ tools:context=".StudentFrontPage">
         android:id="@+id/student_login_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/student_login_submit_text"
+        android:text="@string/login_submit_text"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/black"
@@ -97,11 +99,5 @@ tools:context=".StudentFrontPage">
         app:layout_constraintTop_toTopOf="parent"
         tools:contentDescription="@string/logo_content_description" />
 
-    <ImageButton
-        android:id="@+id/back_button"
-        android:layout_width="40dp"
-        android:layout_height="51dp"
-        android:background="@color/uoft_blue"
-        android:src="@drawable/abc_vector_test" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
