--- a/app/src/main/res/layout/fragment_student_signup_page.xml
+++ b/app/src/main/res/layout/fragment_student_signup_page.xml
@@ -51,7 +51,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="288.8dp"
-        android:layout_height="252dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,6 +118,36 @@
             android:inputType="textPassword"
             android:textColorHint="@color/black"
             android:textSize="20sp" />
+
+        <RadioGroup
+            android:id="@+id/userTypeRadioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/adminSignupRadio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="35dp"
+                android:layout_marginRight="35dp"
+                android:text="@string/admin_checkbox_text"
+                android:textColor="@color/white"
+                app:buttonTint="@color/button_green" />
+
+            <RadioButton
+                android:id="@+id/studentSignupRadio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:text="@string/student_checkbox_text"
+                android:textColor="@color/white"
+                app:buttonTint="@color/button_green" />
+
+        </RadioGroup>
 
     </LinearLayout>
 
