--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -41,7 +41,11 @@
         android:id="@+id/adminLoginPage"
         android:name="com.example.b07project.AdminLoginPage"
         android:label="fragment_admin_login_page"
-        tools:layout="@layout/fragment_admin_login_page" />
+        tools:layout="@layout/fragment_admin_login_page" >
+        <action
+            android:id="@+id/action_adminLoginPage_to_adminFrontPage"
+            app:destination="@id/adminFrontPage" />
+    </fragment>
     <fragment
         android:id="@+id/studentSignupPage"
         android:name="com.example.b07project.StudentSignupPage"
@@ -53,5 +57,13 @@
         <action
             android:id="@+id/action_studentSignupPage_to_studentFrontPage"
             app:destination="@id/studentFrontPage" />
+        <action
+            android:id="@+id/action_studentSignupPage_to_adminFrontPage"
+            app:destination="@id/adminFrontPage" />
     </fragment>
+    <fragment
+        android:id="@+id/adminFrontPage"
+        android:name="com.example.b07project.AdminFrontPage"
+        android:label="fragment_admin_front_page"
+        tools:layout="@layout/fragment_admin_front_page" />
 </navigation>
