--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="uoft_blue">#192852</color>
+    <color name="UI_background">#D9D9D9</color>
     <color name="button_tint">#D9D9D9</color>
     <color name="button_green">#2AB514</color>
 </resources>
