--- a/app/src/main/res/layout/fragment_student_login_page.xml
+++ b/app/src/main/res/layout/fragment_student_login_page.xml
@@ -14,10 +14,11 @@ tools:context=".StudentFrontPage">
         android:id="@+id/imageView"
         android:layout_width="313dp"
         android:layout_height="243dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="284dp"
         android:contentDescription="@string/utsc_logo"
         android:src="@drawable/utsclogo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:contentDescription="@string/logo_content_description" />
@@ -38,7 +39,7 @@ tools:context=".StudentFrontPage">
         android:layout_width="288.8dp"
         android:layout_height="59dp"
         android:layout_marginTop="300dp"
-        android:background="@drawable/rounded_edittext"
+        android:background="@drawable/white_rounded_edittext"
         android:gravity="center"
         android:paddingRight="15dp"
         android:text="Student Login"
@@ -53,7 +54,7 @@ tools:context=".StudentFrontPage">
         android:layout_width="288.8dp"
         android:layout_height="48dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/rounded_edittext"
+        android:background="@drawable/white_rounded_edittext"
         android:ems="10"
         android:hint="Enter Email"
         android:inputType="textEmailAddress"
@@ -84,7 +85,7 @@ tools:context=".StudentFrontPage">
         android:id="@+id/student_password_input"
         android:layout_width="288.8dp"
         android:layout_height="48dp"
-        android:background="@drawable/rounded_edittext"
+        android:background="@drawable/white_rounded_edittext"
         android:ems="10"
         android:hint="Enter Password"
         android:inputType="textPassword"
