--- a/app/src/main/res/layout/fragment_admin_front_page.xml
+++ b/app/src/main/res/layout/fragment_admin_front_page.xml
@@ -53,11 +53,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="160dp"
-        android:background="#344C4747"
         android:text="Log Out"
         android:textColor="#E41313"
-        app:backgroundTint="#615E5E"
-        app:cornerRadius="?android:attr/buttonCornerRadius"
+        app:backgroundTint="#1A000000"
+        app:cornerRadius="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
