--- a/app/src/main/res/layout/fragment_admin_course_view.xml
+++ b/app/src/main/res/layout/fragment_admin_course_view.xml
@@ -57,6 +57,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <Button
+            android:id="@+id/newbackbt"
+            android:layout_width="54dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="24dp"
+            android:drawableBottom="@drawable/arrow_left"
+            app:backgroundTint="@color/white"
+            app:cornerRadius="100dp"
+            app:layout_constraintEnd_toStartOf="@+id/courseOffering"
+            app:layout_constraintHorizontal_bias="0.333"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
