--- a/app/src/main/res/layout/fragment_student_login_page.xml
+++ b/app/src/main/res/layout/fragment_student_login_page.xml
@@ -10,28 +10,33 @@ tools:context=".StudentFrontPage">
 
 <!-- TODO: Update blank fragment layout -->
 
+    <Button
+        android:id="@+id/slbackbt"
+        android:layout_width="54dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
+        android:drawableBottom="@drawable/arrow_left"
+        app:backgroundTint="@color/white"
+        app:cornerRadius="100dp"
+        app:layout_constraintEnd_toStartOf="@+id/courseOffering"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="313dp"
         android:layout_height="243dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:contentDescription="@string/utsc_logo"
         android:src="@drawable/utsclogo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.622"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:contentDescription="@string/logo_content_description" />
-
-    <ImageButton
-        android:id="@+id/back_button"
-        android:layout_width="40dp"
-        android:layout_height="51dp"
-        android:background="@color/uoft_blue"
-        android:contentDescription="return"
-        android:src="@drawable/abc_vector_test"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/textView4"
