--- a/app/src/main/res/layout/fragment_student_signup_page.xml
+++ b/app/src/main/res/layout/fragment_student_signup_page.xml
@@ -10,16 +10,20 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ImageButton
-        android:id="@+id/backbt"
-        android:layout_width="40dp"
-        android:layout_height="51dp"
-        android:background="@color/uoft_blue"
-        android:contentDescription="return"
-        android:src="@drawable/abc_vector_test"
+    <Button
+        android:id="@+id/rbackbt"
+        android:layout_width="54dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
+        android:drawableBottom="@drawable/arrow_left"
+        app:backgroundTint="@color/white"
+        app:cornerRadius="100dp"
+        app:layout_constraintEnd_toStartOf="@+id/courseOffering"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -150,5 +154,11 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/white_rounded_edittext" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
