Add admin course adder page
Added the adminCourseAdd page, which allows admins to add courses of a given code, name, prerequisite set, and session offering

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="uoft_blue">#192852</color>
     <color name="button_tint">#D9D9D9</color>
     <color name="button_green">#2AB514</color>
+    <color name="background_gray">#DDDDDD</color>
+    <color name="button_background_gray">#DDDDDDCC</color>
 </resources>
