--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,6 +45,9 @@
         <action
             android:id="@+id/action_adminFrontPage_to_adminLoginPage"
             app:destination="@id/adminLoginPage" />
+        <action
+            android:id="@+id/action_adminFrontPage_to_adminCourseAdd"
+            app:destination="@id/adminCourseAdd" />
     </fragment>
     <fragment
         android:id="@+id/adminLoginPage"
@@ -71,6 +74,15 @@
             app:destination="@id/studentFrontPage" />
         <action
             android:id="@+id/action_studentSignupPage_to_adminFrontPage"
+            app:destination="@id/adminFrontPage" />
+    </fragment>
+    <fragment
+        android:id="@+id/adminCourseAdd"
+        android:name="com.example.b07project.AdminCourseAdd"
+        android:label="fragment_admin_course_add"
+        tools:layout="@layout/fragment_admin_course_add" >
+        <action
+            android:id="@+id/action_adminCourseAdd_to_adminFrontPage"
             app:destination="@id/adminFrontPage" />
     </fragment>
 </navigation>
