--- a/app/src/main/res/layout/activity_admin_course_view.xml
+++ b/app/src/main/res/layout/activity_admin_course_view.xml
@@ -37,6 +37,8 @@
             android:id="@+id/courseCodes"
             android:layout_width="160dp"
             android:layout_height="44.5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="120dp"
             android:background="@drawable/blue_rounded_edittext"
             android:gravity="start|center_vertical"
@@ -51,11 +53,14 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/courses"
             android:layout_width="370dp"
-            android:layout_height="540dp"
-            android:layout_marginBottom="20dp"
+            android:layout_height="475dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"
+            android:scrollbars="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/courseCodes" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
