--- a/app/src/main/res/layout/fragment_admin_front_page.xml
+++ b/app/src/main/res/layout/fragment_admin_front_page.xml
@@ -37,7 +37,7 @@
         app:layout_constraintVertical_bias="0.102" />
 
     <Button
-        android:id="@+id/addcoursebt"
+        android:id="@+id/ctbt"
         android:layout_width="216dp"
         android:layout_height="57dp"
         android:drawableRight="@drawable/plus"
