--- a/app/src/main/res/layout/fragment_student_front_page.xml
+++ b/app/src/main/res/layout/fragment_student_front_page.xml
@@ -64,7 +64,7 @@
         app:layout_constraintVertical_bias="0.066" />
 
     <Button
-        android:id="@+id/addcoursebt"
+        android:id="@+id/ctbt"
         android:layout_width="216dp"
         android:layout_height="57dp"
         android:drawableRight="@drawable/calendar"
