--- a/app/src/main/res/layout/activity_admin_course_view.xml
+++ b/app/src/main/res/layout/activity_admin_course_view.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D9D9D9"
-    tools:context=".AdminCourseView">
+    android:background="#D9D9D9">
 
     <!-- TODO: Update blank fragment layout -->
 
