--- a/app/src/main/res/layout/course.xml
+++ b/app/src/main/res/layout/course.xml
@@ -100,7 +100,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/deleteButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
@@ -114,7 +114,7 @@
             app:srcCompat="@drawable/delete" />
 
         <ImageButton
-            android:id="@+id/imageButton4"
+            android:id="@+id/editButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="10dp"
