--- a/app/src/main/res/layout/framgent_student_academic_history.xml
+++ b/app/src/main/res/layout/framgent_student_academic_history.xml
@@ -53,10 +53,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="53dp"
-        android:layout_height="53dp"
+    <ImageButton
+        android:id="@+id/toCourseView"
+        android:layout_width="67dp"
+        android:layout_height="71dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
