--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:id="@+id/admin_login_button"
         android:layout_width="164.45dp"
         android:layout_height="50dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginBottom="16dp"
         android:cursorVisible="false"
         android:drawableRight="@drawable/setting"
         android:drawablePadding="20dp"
@@ -42,8 +42,7 @@
         app:elevation="2dp"
         app:layout_constraintBottom_toTopOf="@+id/student_login_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/student_login_button"
@@ -61,7 +60,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.424" />
 
     <Button
         android:id="@+id/signup_button"
@@ -79,8 +79,9 @@
         app:cornerRadius="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/student_login_button"
-        app:layout_constraintVertical_bias="0.503" />
+        app:layout_constraintVertical_bias="0.366" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
