--- a/app/src/main/res/layout/fragment_admin_login_page.xml
+++ b/app/src/main/res/layout/fragment_admin_login_page.xml
@@ -40,7 +40,7 @@
         android:id="@+id/textView5"
         android:layout_width="288.8dp"
         android:layout_height="59dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="348dp"
         android:background="@drawable/white_rounded_edittext"
         android:gravity="center"
         android:paddingRight="15dp"
@@ -49,9 +49,7 @@
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/admin_email_address_input"
